			   XPCE ChangeLog
			   ==============


* FIXED: Crash in wrapped text objects.  Caused by incompatible change in
  low level string functions.  As compatibility is restored, more problems
  may be fixed by this.

* FIXED: Bug#6: TAB in password item.

* FIXED: `file->append' for text-files did not terminate (bug introduced
  in 6.5.3).

* PORT: Fix various MacOS (and other) portability problems introduced
  in wide character version.

* PORT: enhanced detection of visibility attribute


VERSION 6.5.3, distributed with SWI-Prolog 5.5.3
================================================

* ADDED: Changed X11 frame class to resemble the XPCE class name.  For
  grouping in KDE.

* ADDED: XFT-based font support for the Unix/X11 version.

* FIXED: Environment handling for class process (Unix).

* ADDED: Ongoing work on wide-character support.  Currently dealing with
  the XPCE <-> Prolog interface, elementary string handling, displaying
  wide strings.


VERSION 6.5.1, distributed with SWI-Prolog 5.5.2
================================================

* FIXED: Inconsistend results when initialising directory with terminating
  /.  Steve Moyle.

* FIXED: Bug#209 PceEmacs CHR colouring on bad input.


VERSION 6.4.3, distributed with SWI-Prolog 5.4.3
================================================

* FIXED: Converting instances of class number to a string.  Petter Egesund.

* FIXED: Win32: Drawing arcs as pie-slice with size-angle close to 0, so
  start and end are at the same location.

* FIXED: forcing loading of swi_compatibility.pl to ensure registration of
  messages.


VERSION 6.4.0, distributed with SWI-Prolog 5.4.0
================================================

* Updated version number for consistency.


VERSION 6.2.26, distributed with SWI-Prolog 5.3.20
==================================================

* FIXED: Bug#176.  Caused by allowing redefinition of `window<-popup'.

* ADDED: `window->update_scroll_bar_values' as a hook to intercept update