@@ -53,9 +53,11 @@ ensure_x_server(_Display, _) :-
         getenv('DISPLAY', _), !.	       % Existing X11 display
 ensure_x_server(Display, _) :-			
         atom_concat('/tmp/.X11-unix/X', Display, Socket),
-	send(file(Socket), exists, @off), !,
+	catch(open(Socket, read, In), _, fail),
+	close(In),
         export_environment(Display).
 ensure_x_server(Display, Depth) :-
+	print_message(informational, pce(xserver(start_Xvfb(Display, Depth)))),
         xauthority(Display, Auth),
         xlog(Display, Log),
         mcookie(Cookie),
@@ -83,3 +85,15 @@ export_environment(Display) :-
         atom_concat(':', Display, Address),
         setenv('DISPLAY', Address),
         setenv('XAUTHORITY', Auth).
+
+		 /*******************************
+		 *	      MESSAGES		*
+		 *******************************/
+:- multifile
+	prolog:message/3.
+
+%	Catch messages.  sgml/4 is generated by the SGML2PL binding.
+
+prolog:message(pce(xserver(start_Xvfb(Display, Depth)))) -->
+	[ 'XPCE: Starting Xvfb on display ~w using depth ~w'-[Display, Depth]
+	].
